# ffxiv-tools

./: .containerignore  .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  compose.yaml  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.cargo/: config.toml
apps/web/: .dockerignore  Containerfile  Dockerfile  README.md  package.json  tsconfig.json
apps/web/src/: server.ts
apps/web/src/app/: layout.tsx  page.test.tsx  page.tsx
apps/web/src/app/(main)/crafting/: layout.tsx  page.tsx
apps/web/src/app/(main)/crafting/calculator/: page.tsx
apps/web/src/app/(main)/crafting/materials/: page.tsx
apps/web/src/app/(main)/crafting/rotations/: page.tsx
apps/web/src/app/(main)/gathering/: layout.tsx  page.tsx
apps/web/src/app/(main)/gathering/collectables/: page.tsx
apps/web/src/app/(main)/gathering/maps/: page.tsx
apps/web/src/app/(main)/market/: layout.tsx  page.tsx
apps/web/src/app/api/health/: rate-limit.ts  route.ts
apps/web/src/app/api/ready/: route.ts
apps/web/src/app/settings/: page.tsx
apps/web/src/components/Nav/: Nav.tsx
apps/web/src/components/SideNav/: Sidenav.test.tsx  Sidenav.tsx
apps/web/src/lib/: constants.ts  errors.ts  logger.ts
apps/web/src/lib/rate-limit/: index.ts
apps/web/src/types/: env.d.ts
services/data-access/: Cargo.toml  Dockerfile
services/data-access/src/: lib.rs  main.rs
services/data-access/tests/: health.rs
services/storage/: Cargo.toml  README.md
services/storage/src/: lib.rs  main.rs
services/storage/tests/: health.rs
(+3 files in other folders)
