[package]
name = "ffxiv-tools-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
polars = { version = "0.37", features = ["parquet"] }

[dev-dependencies]
tokio-test = "0.4" 